# minfer-python

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  setup.py  setup.sh
apps/: benchmark.py  profile.py
logs/: profile_matmul_wmma.txt
src/minfer/: const.py  core.py  utils.py
src/minfer/kernels/: __init__.py  refs.py
src/minfer/kernels/_ref/: __init__.py  kernels.py  quants.cpp  quants_impl.cpp  quants_impl.hpp
src/minfer/kernels/cpu/: __init__.py  kernels.py  quants.cpp  quants.hpp  quants_impl.cpp  quants_impl.hpp
src/minfer/kernels/csrc/: ops.py  quants.cpp
src/minfer/kernels/csrc/cuda/: kernels.cu  quants.cu
src/minfer/kernels/cuda/: __init__.py  dequant.cu  kernels.cu  quants.cu  quants.h
src/minfer/kernels/torch_ext/: __init__.py  ops.py
src/minfer/kernels/torch_ext/csrc/: impl_common.hpp  kernels.cpp  quants.cpp  quants_impl.cpp  quants_impl.hpp  reg.cpp
src/minfer/kernels/torch_ext/csrc/common/: types.hpp
src/minfer/kernels/torch_ext/csrc/cuda/: kernels.cu  kernels.cuh  quants.cu  quants_impl.cu  quants_impl.cuh  reg.cu
src/minfer/kernels/torch_ext/csrc/cuda/core/: helpers.cuh
src/minfer/kernels/torch_ext/csrc/cuda/embed/: kernel.cuh  op.cuh
src/minfer/kernels/torch_ext/csrc/cuda/ffn/: kernel.cuh  op.cuh
src/minfer/kernels/torch_ext/csrc/cuda/flash_attn/: helpers.cuh  kernel.cuh  op.cuh
src/minfer/kernels/torch_ext/csrc/cuda/gemm/: helpers.cuh  lookup.cuh  op.cuh
src/minfer/kernels/torch_ext/csrc/cuda/il_rope/: kernel.cuh  op.cuh
src/minfer/kernels/torch_ext/csrc/quants/: impl.cpp  impl.hpp  kernel.cpp  op.cpp  op.hpp
src/minfer/kernels/triton/: __init__.py  const.py  dequant.py  kernels.py  quants.py
test/: conftest.py  kernels.py
tests/: test_kernels.py
(+44 files in other folders)
