[project]
name = "minfer"
version = "0.1.0"
description = "Minimal Python (decoder-only) LLM inference engine w/ Triton and CUDA kernels"
readme = "README.md"
requires-python = ">=3.13"
# might have to pull gguf from github main
dependencies = [
    "torch >= 2.6.0",
    "triton >= 3.2.0 ; sys_platform == 'linux'",
    "gguf",
    "ninja",
]

[build-system]
requires = [
    "setuptools",
    "torch",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-randomly>=3.16.0",
]