[project]
name = "minfer"
version = "0.1.0"
description = "Minimal Python (decoder-only) LLM inference engine w/ optimized CUDA kernels"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch >= 2.10.0",
    "gguf",
]

[build-system]
requires = [
    "setuptools",
    "ninja",
    "torch >= 2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-randomly>=3.16.0",
]